Go back to gradle 1.0.0-m3 build

--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         flatDir dirs: project(':').file('lib/build')
     }
     dependencies {
-        classpath "clojuresque:clojuresque:1.4.2"
+        classpath "clojuresque:clojuresque:1.4.1"
         classpath "local-dotgradle:local-dotgradle:1.0.0"
     }
 }
 
 allprojects {
-    localDotGradle = project(':').file("local.gradle")
+    localDotGradle = project(':').file("local.gradle").absoluteFile
     apply plugin: 'local-dotgradle'
 }
 
@@ -132,7 +132,7 @@ project(':vim') {
 task genCompletions(type: clojuresque.ClojureExec) {
     classpath = project.files(
         project(':server').sourceSets.main.clojure.srcDirs,
-        project(':server').sourceSets.main.output.classesDir,
+        project(':server').sourceSets.main.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
     main = "vimclojure.gencompletions/main"
@@ -160,10 +160,12 @@ task genCompletions(type: clojuresque.ClojureExec) {
     ]
 }
 
-task runNailgun(type: JavaExec, dependsOn: project(':server').classes) {
+task runNailgun(type: JavaExec) {
+    dependsOn project(':server').classes
+    dependsOn project(':server').processResources
     classpath = project.files(
         project(':server').sourceSets.main.clojure.srcDirs,
-        project(':server').sourceSets.main.output.classesDir,
+        project(':server').sourceSets.main.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
     main = 'vimclojure.nailgun.NGServer'
