Update syntax and completions for 1.3

--- a/build.gradle
+++ b/build.gradle
@@ -138,6 +138,7 @@ task genCompletions(type: clojuresque.ClojureExec) {
     main = "vimclojure.gencompletions/main"
     args = [
         "clojure.core",
+        "clojure.data",
         "clojure.inspector",
         "clojure.java.browse",
         "clojure.java.browse-ui",
