--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ subprojects {
     apply plugin: 'java-base'
 
     group = 'vimclojure'
-    version = '2.3.0'
+    version = '2.3.1-SNAPSHOT'
 
     defaultTasks 'build'
 }
