--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     repositories {
-        flatDir dirs: project(':').file('lib/build')
+        flatDir { dirs project(':').file('lib/build') }
     }
     dependencies {
-        classpath "clojuresque:clojuresque:1.4.1"
+        classpath "clojuresque:clojuresque:1.4.4"
         classpath "local-dotgradle:local-dotgradle:1.0.0"
     }
 }
@@ -32,7 +32,7 @@ project(':server') {
     apply plugin: 'clojure'
 
     defaultRepositories {
-        flatDir dirs: project(':').file('lib/build')
+        flatDir { dirs project(':').file('lib/build') }
         mavenCentral()
     }
 
@@ -131,7 +131,7 @@ project(':vim') {
 task genCompletions(type: clojuresque.ClojureExec) {
     classpath = project.files(
         project(':server').sourceSets.main.clojure.srcDirs,
-        project(':server').sourceSets.main.classesDir,
+        project(':server').sourceSets.main.output.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
     main = "vimclojure.gencompletions/main"
@@ -165,7 +165,7 @@ task runNailgun(type: JavaExec) {
     dependsOn project(':server').processResources
     classpath = project.files(
         project(':server').sourceSets.main.clojure.srcDirs,
-        project(':server').sourceSets.main.classesDir,
+        project(':server').sourceSets.main.output.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
     main = 'vimclojure.nailgun.NGServer'
