Basic building of Haskell part for gradle

--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,23 @@ project(':client') {
     }
 }
 
+project(':nrepl-client') {
+    task compileHaskell {
+        //inputs.dir project.file('src/main/haskell')
+        //outputs.dir project.file('build/main/classes')
+    } << {
+        project.file("build/main/classes").mkdirs()
+        project.exec {
+            commandLine "ghc", "-isrc/main/haskell",
+                "-outputdir", "build/main/classes",
+                "-o", "build/main/classes/nrepl-client",
+                "-XFlexibleInstances",
+                "--make",
+                "src/main/haskell/VimClojure/Main.hs"
+        }
+    }
+}
+
 project(':vim') {
     task vimZip(type: Zip) {
         archiveName = "vimclojure-" + project.version + ".zip"
