--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'vimclojure'
-include 'nailgun-client'
-include 'nrepl-client'
-include 'server'
 include 'vim'
+include 'server'
 include 'gradle-plugin'
+include 'nrepl-client'
+include 'nailgun-client'
+include 'nailgun-connector'
