--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ subprojects {
     apply plugin: 'java-base'
 
     group = 'vimclojure'
-    version = '2.3.4'
+    version = '2.3.5-SNAPSHOT'
 
     defaultTasks 'build'
 }
